--- a/public/index.html
+++ b/public/index.html
@@ -3,50 +3,59 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../public/styles.css" />
     <title>Tic Tac Toe</title>
 </head>
 <body>
-    <header class="header">
-        <div class="logo">
-            <img src="../images/close.png" alt="cross-icon">
-            <img src="../images/rec.png" alt="circle-con">
-        </div>
-        <div class="player__turn-container">
-            <div class="player__icon-container">
+    <div class="main-container">
+        <header class="header">
+            <div class="game-logo">
+                <img src="../images/close.png" alt="cross-icon" class="cross-logo">
+                <img src="../images/circle.png" alt="circle-con" class="circle-logo">
+            </div>
+            <div class="player__turn-container">
                 <img src="../images/close.png" alt="player-turn-icon">
                 <h4 class="title">Turn</h4>
             </div>
-        </div>
-        <div class="reset__btn--container">
-            <img src="../images/rotate-right.png" alt="reset-btn">
-        </div>
-    </header>
-    <main class="main">
-        <div class="container">
-            <div class="box">1</div>
-            <div class="box">2</div>
-            <div class="box">3</div>
-            <div class="box">4</div>
-            <div class="box">5</div>
-            <div class="box">6</div>
-            <div class="box">7</div>
-            <div class="box">8</div>
-            <div class="box">9</div>
-        </div>
-    </main>
-    <footer class="footer">
-        <div class="player__x-won">
-            <h5>X (YOU)</h5>
-            <p>14</p>
-        </div>
-        <div class="ties">
-            <h5>TIES</h5>
-            <p>32</p>
-        </div>
-        <div class="player__o-won">
-            <h5>O (CPU)</h5>
-            <p>11</p>
-        </div>
-    </footer>
+            <div class="reset__btn-container">
+                <button class="reset-btn"><img src="../images/reload.png" alt="reset-btn"></button>
+            </div>
+        </header>
+        <main class="main">
+            <div class="container">
+                <div class="row">
+                    <div class="box">1</div>
+                    <div class="box">2</div>
+                    <div class="box">3</div>
+                </div>
+
+                <div class="row">
+                    <div class="box">4</div>
+                    <div class="box">5</div>
+                    <div class="box">6</div>
+                </div>
+
+                <div class="row">
+                    <div class="box">7</div>
+                    <div class="box">8</div>
+                    <div class="box">9</div>
+                </div>
+            </div>
+        </main>
+        <footer class="footer">
+            <div class="player__x-won result-box">
+                <h5>X (YOU)</h5>
+                <p>14</p>
+            </div>
+            <div class="ties result-box">
+                <h5>TIES</h5>
+                <p>32</p>
+            </div>
+            <div class="player__o-won result-box">
+                <h5>O (CPU)</h5>
+                <p>11</p>
+            </div>
+        </footer>
+    </div>
 </body>
 </html>
