--- a/public/index.html
+++ b/public/index.html
@@ -10,8 +10,10 @@
     <div class="main-container">
         <header class="header">
             <div class="game-logo">
-                <img src="../images/close.png" alt="cross-icon" class="cross-logo">
-                <img src="../images/circle.png" alt="circle-con" class="circle-logo">
+                <a href="https://www.instagram.com/zmyn.17/" target="_blank">
+                    <img src="../images/close.png" alt="cross-icon" class="cross-logo">
+                    <img src="../images/circle.png" alt="circle-con" class="circle-logo">
+                </a>
             </div>
             <div class="player__turn-container">
                 <img src="../images/close.png" alt="player-turn-icon">
@@ -24,21 +26,21 @@
         <main class="main">
             <div class="container">
                 <div class="row">
-                    <div class="box">1</div>
-                    <div class="box">2</div>
-                    <div class="box">3</div>
+                    <div class="box"></div>
+                    <div class="box"></div>
+                    <div class="box"></div>
                 </div>
 
                 <div class="row">
-                    <div class="box">4</div>
-                    <div class="box">5</div>
-                    <div class="box">6</div>
+                    <div class="box"></div>
+                    <div class="box"></div>
+                    <div class="box"></div>
                 </div>
 
                 <div class="row">
-                    <div class="box">7</div>
-                    <div class="box">8</div>
-                    <div class="box">9</div>
+                    <div class="box"></div>
+                    <div class="box"></div>
+                    <div class="box"></div>
                 </div>
             </div>
         </main>
