add media query

--- a/public/index.html
+++ b/public/index.html
@@ -8,12 +8,13 @@
 </head>
 <body>
     <div class="main-container">
+        <div class="logo"><a href="href="https://www.instagram.com/zmyn.17/" target="_blank" class="logo-title">ZEE.</a></div>
         <header class="header">
             <div class="game-logo-container">
-                <a class="game-logo" href="https://www.instagram.com/zmyn.17/" target="_blank">
+                <div class="game-logo">
                     <img src="../images/close.png" alt="cross-icon" class="cross-logo">
                     <img src="../images/circle.png" alt="circle-con" class="circle-logo">
-                </a>
+                </div>
             </div>
             <div class="player__turn-container">
                 <img src="../images/close.png" alt="player-turn-icon" id="player__turn-pic">
